Added request params and overwite from middleware the userID to be exact as the userID from the token decryption for better security.

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proj",
+  "name": "Shopping-Online",
   "version": "1.0.0",
-  "description": "",
+  "description": "Shopping Online - School Project",
   "main": "index.js",
   "scripts": {
     "start": "node 01_controllers/index.js"
